# MeshFix3

./: .gitignore  CMakeLists.txt  README.md  README.txt  warnings.txt
.github/workflows/: ci.yml
bench/: benchmark.py  corrupt_mesh.cpp  corrupt_mesh.py  generate_mesh.cpp  generate_mesh.py  scalability_results.csv
dataset/: degenerate_cap.off  degenerate_needle.off  hole.off  intersect.off  noise.off  normals.off
docs/: UserGuide.md
include/Kernel/: basics.h  list.h  point.h
include/TMesh/: tin.h
src/Algorithms/: checkAndRepair.cpp  detectIntersections.cpp  holeFilling.cpp  marchIntersections.cpp
src/Kernel/: list.cpp  point.cpp  tmesh.cpp
src/MeshFix/: meshfix.cpp
src/TMesh/: io.cpp  tin.cpp  triangle.cpp
tests/: test_cli.py  test_dataset.py  unit_tests.cpp
tests/dataset_output/: fixed_degenerate_cap.off  fixed_degenerate_needle.off  fixed_hole.off  fixed_intersect.off  fixed_noise.off
